<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_header_only_lib</name>
  <version>1.0.0</version>
  <description>Executable for using a header-only ROS2 library</description>
  <maintainer email="gleichdick@users.noreply.github.com">Bjar Ne</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libssl-dev</build_depend>
  <build_export_depend>libssl-dev</build_export_depend>

  <exec_depend>openssl</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
